--- a/index.html
+++ b/index.html
@@ -3,24 +3,29 @@ layout: default
 title: Blog
 ---
 
+<h1>책 만드는 이야기</h1>
+
 <!-- This loops through the paginated posts -->
-{% for post in paginator.posts %}
-  <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-  <p class="author">
-    <span class="date">{{ post.date }}</span>
-  </p>
-  <div class="content">
-    {{ post.excerpt }}
-  </div>
-{% endfor %}
+<ul>
+  {% for post in paginator.posts %}
+  <li>
+    <h2><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h2>
+    <!-- <span class="author">{{ post.author }}</span> -->
+    <span class="date">{{ post.date | date: '%Y-%m-%d %H:%M' }}</span>
+    <div class="content">
+      {{ post.excerpt }}
+    </div>
+  </li>
+  {% endfor %}
+</ul>
 
 <!-- Pagination links -->
 {% if paginator.total_pages > 1 %}
 <div id="pagination">
   {% if paginator.previous_page %}
-    <a href="{{ paginator.previous_page_path | relative_url }}">&laquo; Prev</a>
+  <a href="{{ paginator.previous_page_path | relative_url }}">&laquo; Prev</a>
   {% else %}
-    <span>&laquo; Prev</span>
+  <span>&laquo; Prev</span>
   {% endif %}
 
   {% for page in (1..paginator.total_pages) %}
@@ -36,7 +41,7 @@ title: Blog
   {% if paginator.next_page %}
     <a href="{{ paginator.next_page_path | relative_url }}">Next &raquo;</a>
   {% else %}
-    <span>Next &raquo;</span>
+  <span>Next &raquo;</span>
   {% endif %}
 </div>
 {% endif %}
