페이지 보완

--- a/blog.html
+++ b/blog.html
@@ -8,8 +8,7 @@ title: Blog
   {% for post in site.posts %}
   <li>
     <h2><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h2>
-    <!-- <span class="author">{{ post.author }}</span> -->
-    <span class="date">{{ post.date | date: '%Y-%m-%d %H:%M' }}</span>
+    <span class="author">{{ post.author }}</span> - <span class="date">({{ post.date | date: '%Y년 %m월 %d일' }})</span>
     <div class="content">
       {{ post.excerpt }}
     </div>
