--- a/index.html
+++ b/index.html
@@ -6,21 +6,14 @@ title: Blog
 <h1>책 만드는 이야기</h1>
 
 <!-- This loops through the paginated posts -->
-<ul>
-  {% for post in paginator.posts %}
-  <li>
-    <h2><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h2>
-    <!-- <span class="author">{{ post.author }}</span> -->
-    <span class="date">{{ post.date | date: '%Y-%m-%d %H:%M' }}</span>
-    {% if site.facebook.comments_count %}
-    (댓글 <span class="fb-comments-count" data-href="{{ post.url | absolute_url }}"></span>개)
-    {% endif %}
-    <div class="content">
-      {{ post.excerpt }}
-    </div>
-  </li>
-  {% endfor %}
-</ul>
+{% for post in paginator.posts %}
+  <h2><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h2>
+  <span class="excerpt">{{ post.excerpt }}</span>
+  by <span class="author">{{ post.author }}</span> <span class="date">({{ post.date | date: '%Y년 %m월 %d일' }})</span>
+  <!-- {% if site.facebook.comments_count %}
+  (댓글 <span class="fb-comments-count" data-href="{{ post.url | absolute_url }}"></span>개)
+  {% endif %} -->
+{% endfor %}
 
 <!-- Pagination links -->
 {% if paginator.total_pages > 1 %}
