--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Blog
 {% for post in paginator.posts %}
   <h2><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h2>
   <span class="excerpt">{{ post.excerpt }}</span>
-  by <span class="author">{{ post.author }}</span> <span class="date">({{ post.date | date: '%Y년 %m월 %d일' }})</span>
+  <span class="author">{{ post.author }}</span> <span class="date">({{ post.date | date: '%Y년 %m월 %d일' }})</span>
   <!-- {% if site.facebook.comments_count %}
   (댓글 <span class="fb-comments-count" data-href="{{ post.url | absolute_url }}"></span>개)
   {% endif %} -->
